[package]
name = "trsh"
version = "1.0.0"
authors = ["asisdrico"]
edition = "2018"
description = "tiny rust shell - tiny backconnect shell written in rust"
license = "MIT"

[dependencies]
clap = "2.33.3"
aes = "0.6.0"
ofb = "0.4.0"
salsa20 = "0.7.2"
termios = "0.3.3"
libc = "0.2.85"
terminal_size = "0.1.16"
nix = "0.19.1"
rand = "0.8.3"
daemonize = "0.4.1"

[lib]
name = "cryptolib"
path = "src/cryptolib/cryptolib.rs"

[[bin]]
name = "trsh-server"
path = "src/server.rs"

[[bin]]
name = "trsh-client"
path = "src/client.rs"